--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>fengjj's place</title>
 </head>
 <body>
 	<h1>hello !</h1>
